[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
[dependencies]
# Note that this bootloader is created by Rust, but is not linked until later.c
bootloader = "0.9.23"
